--- a/src/app/index-app/File/new-other/new-other.html
+++ b/src/app/index-app/File/new-other/new-other.html
@@ -1,6 +1,6 @@
 <div class="content-wrap">
     <div class="content">
-        <toolbar style="width:100%" [searchData]="searchData" (Ondata)="cancelDataEvent($event)"></toolbar>
+        <toolbar style="width:100%" [searchData]="searchData" DJZT="10" (Ondata)="cancelDataEvent($event)" [btnSwitch]="btnSwitch" (Disabled)="FormDisabled($event)"></toolbar>
         <div class="row">
             <form #searchForm="ngForm">
                 <div class="ui-g container-wrap">
@@ -23,27 +23,18 @@
             <p-panel header="编辑公司信息" [toggleable]="true">
                 <form [formGroup]="form" *ngIf="lock">
                     <ng-container *ngFor="let FormData of FormDatas">
-                        <form-base [field]="FormData" [form]="form"></form-base>
+                        <form-base [field]="FormData" [form]="form" [disabled]="disabled"></form-base>
                     </ng-container>
                 </form>
             </p-panel>
         </div>
-        <div class="row">
+        <div class="row pos-rlt">
             <p-panel header="查询结果" [toggleable]="true">
-                <p-dataTable [value]="cancelData" [rows]="10" [paginator]="true" [pageLinks]="3" [rowsPerPageOptions]="[5,10,20]" [emptyMessage]="''">
-                    <p-column field="GSID" header="公司编码"></p-column>
-                    <p-column field="GSMC" header="公司名称"></p-column>
-                    <p-column field="ZCDZ" header="注册地址"></p-column>
-                    <p-column field="YZBM" header="邮政编码"></p-column>
-                    <p-column field="GSSH" header="税号"></p-column>
-                    <p-column field="GSKHYH" header="开户银行"></p-column>
-                    <p-column field="GSZH" header="账号"></p-column>
-                    <p-column field="LXR" header="联系人"></p-column>
-                    <p-column field="LXDH" header="联系电话"></p-column>
-                    <p-column field="SJHM" header="手机号码"></p-column>
-                    <p-column field="BZ" header="备注"></p-column>
-                </p-dataTable>
+                <ng-container *ngIf="lock2">
+                    <search-grid [gridDataConf]="gridDataConf" [gridSearchData]="gridSearchData" (selectedData)="selectedGirdEvent($event)"></search-grid>
+                </ng-container>
             </p-panel>
+            <div class="mask" *ngIf="expression"></div>
         </div>
     </div>
 </div>
