--- a/src/app/shared/toolbar/toolbar.component.html
+++ b/src/app/shared/toolbar/toolbar.component.html
@@ -1,18 +1,18 @@
 <div class="ui-g toolbar">
     <div class="ui-g-1">
-        <button pButton type="text" (click)="add()" icon="fa-plus-square" [disabled]="!toggle" label="新增"></button>
+        <button pButton type="text" (click)="add($event)" icon="fa-plus-square" [disabled]="btnSwitch" label="新增"></button>
     </div>
     <div class="ui-g-1">
-        <button pButton type="text" (click)="edit()" icon="fa-pencil" [disabled]="true" label="修改"></button>
+        <button pButton type="text" (click)="edit()" icon="fa-pencil" [disabled]="btnSwitch" label="修改"></button>
     </div>
     <div class="ui-g-1">
-        <button pButton type="text" (click)="del()" icon="fa-minus" [disabled]="true" label="删除"></button>
+        <button pButton type="text" (click)="del()" icon="fa-minus" [disabled]="btnSwitch" label="删除"></button>
     </div>
     <div class="ui-g-1">
-        <button pButton type="text" (click)="save()" icon="fa-save (alias)" [disabled]="toggle" label="保存"></button>
+        <button pButton type="text" (click)="save()" icon="fa-save (alias)" [disabled]="true" label="保存"></button>
     </div>
     <div class="ui-g-1">
-        <button pButton type="text" (click)="cancel()" icon="fa-close (alias)" [disabled]="toggle" label="取消"></button>
+        <button pButton type="text" (click)="cancel()" icon="fa-close (alias)" [disabled]="true" label="取消"></button>
     </div>
     <div class="ui-g-1">
         <button pButton type="text" (click)="search()" icon="fa-search" [disabled]="!toggle" label="查询"></button>
