--- a/src/app/index-app/File/new-other/new-other.html
+++ b/src/app/index-app/File/new-other/new-other.html
@@ -1,6 +1,6 @@
 <div class="content-wrap">
     <div class="content">
-        <toolbar style="width:100%" [searchData]="searchData" DJZT="10" (Ondata)="cancelDataEvent($event)" [btnSwitch]="btnSwitch" (Disabled)="FormDisabled($event)"></toolbar>
+        <toolbar style="width:100%" [searchData]="searchData" DJZT="10" [btnList]="btnList" (Ondata)="cancelDataEvent($event)" [btnSwitch]="btnSwitch" (Disabled)="FormDisabled($event)"></toolbar>
         <div class="row">
             <form #searchForm="ngForm">
                 <div class="ui-g container-wrap">
