--- a/src/app/shared/searchGrid/searchGrid.component.html
+++ b/src/app/shared/searchGrid/searchGrid.component.html
@@ -1,4 +1,5 @@
-<p-dataTable [value]="gridSearchData" [rows]="gridDataConf.rows? gridDataConf.rows : 10" [paginator]="gridDataConf.paginator? gridDataConf.paginator : true" [pageLinks]="gridDataConf.pageLinks? gridDataConf.pageLinks: 3" [rowsPerPageOptions]="[5,10,20]"
+<form>
+<p-dataTable  [editable]="true"  [value]="gridSearchData" [rows]="gridDataConf.rows? gridDataConf.rows : 10" [paginator]="gridDataConf.paginator? gridDataConf.paginator : true" [pageLinks]="gridDataConf.pageLinks? gridDataConf.pageLinks: 3" [rowsPerPageOptions]="[5,10,20]"
     [emptyMessage]="''" selectionMode="{{gridDataConf.selectionMode? gridDataConf.selectionMode : 'single'}}" [(selection)]="selected" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
     <!--<p-column field="GSID" header="公司编码"></p-column>
     <p-column field="GSMC" header="公司名称"></p-column>
@@ -12,7 +13,8 @@
     <p-column field="SJHM" header="手机号码"></p-column>
     <p-column field="BZ" header="备注"></p-column>-->
     <ng-container *ngFor="let column of gridDataConf.column">
-        <p-column field="{{column.field}}" header="{{column.header}}"></p-column>
+        <p-column field="{{column.field}}" header="{{column.header}}"  [editable]="true"></p-column>
     </ng-container>
     
 </p-dataTable>
+</form>
