--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -215,7 +215,7 @@ label.flex-box .search-btn:hover {
     width: 100%;
     height:  100%;
     position: absolute;
-    top: 0;
+    top: 30px;
     left: 0;
     z-index : 99;
 }
