--- a/src/app/index-app/File/new-other/new-other.html
+++ b/src/app/index-app/File/new-other/new-other.html
@@ -1,7 +1,7 @@
 <div class="content-wrap">
     <div class="content">
         
-        <toolbar class="toolbar-fix" [searchData]="searchData" [btnList]="btnList" (Ondata)="cancelDataEvent($event)" [btnSwitch]="btnSwitch" (Disabled)="FormDisabled($event)" [formValue]="form?form.value:null" [form]="form" [iSave]="iSave"></toolbar>
+        <toolbar class="toolbar-fix" [searchData]="searchData" [btnList]="btnList" (Ondata)="cancelDataEvent($event)" [btnSwitch]="btnSwitch" (Disabled)="FormDisabled($event)" (display)="DialogDisplay($event)" [formValue]="form?form.value:null" [form]="form" [iSave]="iSave"></toolbar>
         <div class="row">
             <form #searchForm="ngForm">
                 <div class="ui-g container-wrap">
@@ -41,3 +41,8 @@
         </div>
     </div>
 </div>
+<my-dialog [(display)]="display"></my-dialog>
+<!--<p-dialog header="Title" [(visible)]="display">
+    Content
+</p-dialog>-->
+{{display}}
