--- a/src/assets/css/app.css
+++ b/src/assets/css/app.css
@@ -59,6 +59,15 @@ a {
     color: #3c3c3c;
 }
 
+fieldset {
+    width: 100%;
+    border: 0;
+    padding: 0;
+}
+
+fieldset input{
+    width: 100%;
+}
 
 /*-----ng-form------------*/
 
@@ -68,7 +77,7 @@ a {
     /* green */
 }
 
-.ng-invalid:not(div):not(p-calendar):not(p-checkbox):not(form) {
+.ng-invalid:not(div):not(p-calendar):not(p-checkbox):not(form):not(fieldset) {
     border-left: 3px solid #a94442!important;
 }
 
@@ -191,6 +200,7 @@ input[type="text"].readyOnly{
 }
 
 .text-exp {
+    float: left;
     display: inline-table;
     text-align: right;
     width: 96px;
