--- a/src/app/index-app/index-app.html
+++ b/src/app/index-app/index-app.html
@@ -12,8 +12,7 @@
   </div>
 </section>
 <section class="app-container">
-  <router-outlet>
-  </router-outlet>
+  <router-outlet></router-outlet>
   <div class="sk-circle-wrap" *ngIf="blockUI">
       <div class="sk-circle">
         <div class="sk-circle1 sk-child"></div>
