--- a/src/app/shared/mydialog/mydialog.component.html
+++ b/src/app/shared/mydialog/mydialog.component.html
@@ -1,3 +1,3 @@
-<p-dialog header="Title" [(visible)]="idisplay" modal="modal" width="300" responsive="true" (onAfterHide)="change($event)">
-    Content
+<p-dialog header="Title" [(visible)]="idisplay" modal="modal" width="900" responsive="true" (onAfterHide)="change($event)">
+    <search-grid [gridDataConf]="gridDataConf" [gridSearchData]="gridSearchData" (selectedData)="selectedGirdEvent($event)"></search-grid>
 </p-dialog>
