--- a/src/app/shared/searchGrid/searchGrid.component.html
+++ b/src/app/shared/searchGrid/searchGrid.component.html
@@ -1,16 +1,5 @@
-<p-dataTable  [editable]="true"  [value]="gridSearchData" [rows]="gridDataConf.rows? gridDataConf.rows : 10" [paginator]="gridDataConf.paginator? gridDataConf.paginator : true" [pageLinks]="gridDataConf.pageLinks? gridDataConf.pageLinks: 3" [rowsPerPageOptions]="[5,10,20]"
-    [emptyMessage]="''" selectionMode="{{gridDataConf.selectionMode? gridDataConf.selectionMode : 'single'}}" [(selection)]="selected" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)" name="acb">
-    <!--<p-column field="GSID" header="公司编码"></p-column>
-    <p-column field="GSMC" header="公司名称"></p-column>
-    <p-column field="ZCDZ" header="注册地址"></p-column>
-    <p-column field="YZBM" header="邮政编码"></p-column>
-    <p-column field="GSSH" header="税号"></p-column>
-    <p-column field="GSKHYH" header="开户银行"></p-column>
-    <p-column field="GSZH" header="账号"></p-column>
-    <p-column field="LXR" header="联系人"></p-column>
-    <p-column field="LXDH" header="联系电话"></p-column>
-    <p-column field="SJHM" header="手机号码"></p-column>
-    <p-column field="BZ" header="备注"></p-column>-->
+<p-dataTable  [editable]="true"  [value]="gridSearchData" [rows]="gridDataConf? gridDataConf.rows : 10" [paginator]="gridDataConf? gridDataConf.paginator : true" [pageLinks]="gridDataConf? gridDataConf.pageLinks: 3" [rowsPerPageOptions]="[5,10,20]"
+    [emptyMessage]="''" selectionMode="{{gridDataConf.selectionMode? gridDataConf.selectionMode : 'single'}}" [(selection)]="selected" (onRowSelect)="onRowSelect($event)" (onRowUnselect)="onRowUnselect($event)">
     <ng-container *ngFor="let column of gridDataConf.column">
         <p-column field="{{column.field}}" header="{{column.header}}"  [editable]="true"></p-column>
     </ng-container>   
